--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,16 @@
 
 @string{aps = {American Physical Society,}}
 
+@ARTICLE{PizzoTWC22,
+  author={A. Pizzo and Lozano, A. and Rangan, S. and Marzetta, T. L.},
+  journal={IEEE Trans. Wireless Commun.}, 
+  title={Wide-aperture {MIMO} via reflection off a smooth surface}, 
+  year={2023},
+  volume={22},
+  number={8},
+  pages={5229-5239},
+  doi={10.1109/TWC.2022.3232742}}
+
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
