--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,26 @@
 
 @string{aps = {American Physical Society,}}
 
+@INPROCEEDINGS{asilomar23,
+  author={M. Sadeghian and A. Pizzo and A. Lozano},
+  booktitle={Asilomar Conf. Signals, Systems, and Computers}, 
+  title={{RIS} in Indoor Environments: Benchmarking Against Ambient Propagation}, 
+  year={2023 (to appear)},
+  volume={},
+  number={},
+  pages={},
+  doi={10.1109/IEEECONF51394.2020.9443506}}
+
+@ARTICLE{PizzoWCL22,
+  author={A. Pizzo and Lozano, A.},
+  journal={IEEE Wireless Commun. Lett.}, 
+  title={On {L}andau's eigenvalue theorem for line-of-sight {MIMO} channels}, 
+  year={2022},
+  volume={11},
+  number={12},
+  pages={2565-2569},
+  doi={10.1109/TWC.2022.3152965}}
+
 @ARTICLE{PizzoTWC22,
   author={A. Pizzo and Lozano, A. and Rangan, S. and Marzetta, T. L.},
   journal={IEEE Trans. Wireless Commun.}, 
@@ -21,6 +41,83 @@
   volume={},
   number={},
   pages={1-5},}
+
+@ARTICLE{PizzoTSP21,
+  author={A. Pizzo and A. D.-J. Torres and L. Sanguinetti and T. L. Marzetta},
+  journal={IEEE Trans. Signal Process.}, 
+  title={Nyquist Sampling and Degrees of Freedom of Electromagnetic Fields}, 
+  year={2022},
+  volume={70},
+  pages={3935-3947},
+  doi={10.1109/TWC.2022.3152965}}
+
+ @ARTICLE{PizzoTWC21,
+  author={A. Pizzo and Sanguinetti, L. and Marzetta, T. L.},
+  journal={IEEE Trans. Wireless Commun.}, 
+  title={Fourier Plane-Wave Series Expansion for holographic {MIMO} Communications}, 
+  year={2022},
+  volume={21},
+  number={9},
+  pages={6890-6905},
+  doi={10.1109/TWC.2022.3152965}}
+
+@article{PizzoIT21,
+      title={Spatial Characterization of Electromagnetic Random Channels}, 
+      author={A. Pizzo and Luca Sanguinetti and Thomas L. Marzetta},
+      year={2022},
+      volume={3},
+      pages={847–866},
+      journal={IEEE Open J. Commun. Soc.}}
+
+@INPROCEEDINGS{Asilomar,
+  author={A. Pizzo and Marzetta, Thomas and Sanguinetti, Luca},
+  booktitle={Asilomar Conf. Signals, Systems, and Computers}, 
+  title={Holographic {MIMO} Communications Under Spatially-Stationary Scattering}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={702-706},
+  doi={10.1109/IEEECONF51394.2020.9443506}}
+
+@book{IETBook,
+author = {A. Pizzo and L. {Sanguinetti} and E. {Bj\"ornson}},
+booktitle = {Advances in Green Communications for 5G and Beyond 5G Networks},
+publisher = {Institution of Engineering and Technology (IET), UK},
+title = {Energy Efficiency Analysis of {5G} Communication Systems},
+year = {2020}
+}
+
+@ARTICLE{9110848,
+  author={A. Pizzo and T. L. {Marzetta} and L. {Sanguinetti}},
+  journal={IEEE J. Sel. Areas Commun.}, 
+  title={Spatially-Stationary Model for holographic {MIMO} Small-Scale Fading}, 
+  year={2020},
+  volume={38},
+  number={9},
+  pages={1964-1979},}
+
+@INPROCEEDINGS{9154219,
+  author={A. Pizzo and T. L. {Marzetta} and L. {Sanguinetti}},
+  booktitle={IEEE Int. Work. Sig. Process. Advances Wireless Commun. (SPAWC)}, 
+  title={Degrees of Freedom of Holographic {MIMO} Channels}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={1-5},}
+  
+@INPROCEEDINGS{8815419,  author={F. {Mirhosseini} and A. Pizzo and L. {Sanguinetti} and A. {Tadaion}},  
+booktitle={IEEE Int. Work. Sig. Process. Advances Wireless Commun. (SPAWC)},   title={Spectral Efficiency Analysis in Dense Massive {MIMO} Networks},   year={2019},  volume={},  number={},  pages={1-5},}
+
+@ARTICLE{8432101,  author={A. Pizzo and A. {Zappone} and L. {Sanguinetti}},  journal={IEEE Sig. Process. Lett.},   title={Solving Fractional Polynomial Problems by Polynomial Optimization Theory},   year={2018},  volume={25},  number={10},  pages={1540-1544},}
+
+@ARTICLE{8362685,  author={A. Pizzo and D. {Verenzuela} and L. {Sanguinetti} and E. {Björnson}},  journal={IEEE Trans. Green Commun. Netw.},   title={Network Deployment for Maximal Energy Efficiency in Uplink With Multislope Path Loss},   year={2018},  volume={2},  number={3},  pages={735-750},}
+
+@INPROCEEDINGS{7959888,  author={A. Pizzo and L. {Sanguinetti}},  booktitle={2017 15th International Symposium on Modeling and Optimization in Mobile, Ad Hoc, and Wireless Networks (WIOPT)},   title={Optimal design of energy-efficient millimeter wave hybrid transceivers for wireless backhaul},   year={2017},  volume={},  number={},  pages={1-8},}
+
+@INPROCEEDINGS{8254572,  author={A. Pizzo and D. {Verenzuela} and L. {Sanguinetti} and E. {Bj\"ornson}},  booktitle={IEEE Global Commun. Conf. (GLOBECOM)},   title={Network Deployment for Maximal Energy Efficiency in Uplink with Zero-Forcing},   year={2017},  volume={},  number={},  pages={1-7},}
+
+@INPROCEEDINGS{7472261,  author={A. Pizzo and S. P. {Chepuri} and G. {Leus}},  booktitle={IEEE Int. Conf. Acoustics, Speech and Sig. Process. (ICASSP)},   title={Towards multi-rigid body localization},   year={2016},  volume={},  number={},  pages={3166-3170},}
+
 
 @book{einstein1956investigations,
   bibtex_show={true},
