--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -40,7 +40,7 @@
   year={2022},
   volume={},
   number={},
-  pages={1-5},}
+  pages={1-5}}
 
 @ARTICLE{PizzoTSP21,
   author={A. Pizzo and A. D.-J. Torres and L. Sanguinetti and T. L. Marzetta},
@@ -84,8 +84,7 @@ author = {A. Pizzo and L. {Sanguinetti} and E. {Bj\"ornson}},
 booktitle = {Advances in Green Communications for 5G and Beyond 5G Networks},
 publisher = {Institution of Engineering and Technology (IET), UK},
 title = {Energy Efficiency Analysis of {5G} Communication Systems},
-year = {2020}
-}
+year = {2020}}
 
 @ARTICLE{9110848,
   author={A. Pizzo and T. L. {Marzetta} and L. {Sanguinetti}},
@@ -94,7 +93,7 @@ year = {2020}
   year={2020},
   volume={38},
   number={9},
-  pages={1964-1979},}
+  pages={1964-1979}}
 
 @INPROCEEDINGS{9154219,
   author={A. Pizzo and T. L. {Marzetta} and L. {Sanguinetti}},
@@ -103,20 +102,20 @@ year = {2020}
   year={2020},
   volume={},
   number={},
-  pages={1-5},}
+  pages={1-5}}
   
 @INPROCEEDINGS{8815419,  author={F. {Mirhosseini} and A. Pizzo and L. {Sanguinetti} and A. {Tadaion}},  
-booktitle={IEEE Int. Work. Sig. Process. Advances Wireless Commun. (SPAWC)},   title={Spectral Efficiency Analysis in Dense Massive {MIMO} Networks},   year={2019},  volume={},  number={},  pages={1-5},}
+booktitle={IEEE Int. Work. Sig. Process. Advances Wireless Commun. (SPAWC)},   title={Spectral Efficiency Analysis in Dense Massive {MIMO} Networks},   year={2019},  volume={},  number={},  pages={1-5}}
 
-@ARTICLE{8432101,  author={A. Pizzo and A. {Zappone} and L. {Sanguinetti}},  journal={IEEE Sig. Process. Lett.},   title={Solving Fractional Polynomial Problems by Polynomial Optimization Theory},   year={2018},  volume={25},  number={10},  pages={1540-1544},}
+@ARTICLE{8432101,  author={A. Pizzo and A. {Zappone} and L. {Sanguinetti}},  journal={IEEE Sig. Process. Lett.},   title={Solving Fractional Polynomial Problems by Polynomial Optimization Theory},   year={2018},  volume={25},  number={10},  pages={1540-1544}}
 
-@ARTICLE{8362685,  author={A. Pizzo and D. {Verenzuela} and L. {Sanguinetti} and E. {Björnson}},  journal={IEEE Trans. Green Commun. Netw.},   title={Network Deployment for Maximal Energy Efficiency in Uplink With Multislope Path Loss},   year={2018},  volume={2},  number={3},  pages={735-750},}
+@ARTICLE{8362685,  author={A. Pizzo and D. {Verenzuela} and L. {Sanguinetti} and E. {Björnson}},  journal={IEEE Trans. Green Commun. Netw.},   title={Network Deployment for Maximal Energy Efficiency in Uplink With Multislope Path Loss},   year={2018},  volume={2},  number={3},  pages={735-750}}
 
-@INPROCEEDINGS{7959888,  author={A. Pizzo and L. {Sanguinetti}},  booktitle={2017 15th International Symposium on Modeling and Optimization in Mobile, Ad Hoc, and Wireless Networks (WIOPT)},   title={Optimal design of energy-efficient millimeter wave hybrid transceivers for wireless backhaul},   year={2017},  volume={},  number={},  pages={1-8},}
+@INPROCEEDINGS{7959888,  author={A. Pizzo and L. {Sanguinetti}},  booktitle={2017 15th International Symposium on Modeling and Optimization in Mobile, Ad Hoc, and Wireless Networks (WIOPT)},   title={Optimal design of energy-efficient millimeter wave hybrid transceivers for wireless backhaul},   year={2017},  volume={},  number={},  pages={1-8}}
 
-@INPROCEEDINGS{8254572,  author={A. Pizzo and D. {Verenzuela} and L. {Sanguinetti} and E. {Bj\"ornson}},  booktitle={IEEE Global Commun. Conf. (GLOBECOM)},   title={Network Deployment for Maximal Energy Efficiency in Uplink with Zero-Forcing},   year={2017},  volume={},  number={},  pages={1-7},}
+@INPROCEEDINGS{8254572,  author={A. Pizzo and D. {Verenzuela} and L. {Sanguinetti} and E. {Bj\"ornson}},  booktitle={IEEE Global Commun. Conf. (GLOBECOM)},   title={Network Deployment for Maximal Energy Efficiency in Uplink with Zero-Forcing},   year={2017},  volume={},  number={},  pages={1-7}}
 
-@INPROCEEDINGS{7472261,  author={A. Pizzo and S. P. {Chepuri} and G. {Leus}},  booktitle={IEEE Int. Conf. Acoustics, Speech and Sig. Process. (ICASSP)},   title={Towards multi-rigid body localization},   year={2016},  volume={},  number={},  pages={3166-3170},}
+@INPROCEEDINGS{7472261,  author={A. Pizzo and S. P. {Chepuri} and G. {Leus}},  booktitle={IEEE Int. Conf. Acoustics, Speech and Sig. Process. (ICASSP)},   title={Towards multi-rigid body localization},   year={2016},  volume={},  number={},  pages={3166-3170}}
 
 
 @book{einstein1956investigations,
