--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
 @string{aps = {American Physical Society,}}
 
 @INPROCEEDINGS{asilomar23,
+  bibtex_show={true},
   author={M. Sadeghian and A. Pizzo and A. Lozano},
   booktitle={Asilomar Conf. Signals, Systems, and Computers}, 
   title={{RIS} in Indoor Environments: Benchmarking Against Ambient Propagation}, 
@@ -12,37 +13,6 @@
   number={},
   pages={},
   doi={10.1109/IEEECONF51394.2020.9443506}}
-
-@ARTICLE{PizzoWCL22,
-  author={A. Pizzo and Lozano, A.},
-  journal={IEEE Wireless Commun. Lett.}, 
-  title={On {L}andau's eigenvalue theorem for line-of-sight {MIMO} channels}, 
-  year={2022},
-  volume={11},
-  number={12},
-  pages={2565-2569},
-  doi={10.1109/TWC.2022.3152965}}
-
-@ARTICLE{PizzoTWC22,
-  author={A. Pizzo and Lozano, A. and Rangan, S. and Marzetta, T. L.},
-  journal={IEEE Trans. Wireless Commun.}, 
-  title={Wide-aperture {MIMO} via reflection off a smooth surface}, 
-  year={2023},
-  volume={22},
-  number={8},
-  pages={5229-5239},
-  doi={10.1109/TWC.2022.3232742}}
-
-@INPROCEEDINGS{vtc22,
-  author={A. Pizzo and A. Lozano and S. Rangan and T. L. {Marzetta}},
-  booktitle={IEEE Veh. Techn. Conf. (VTC2022-Spring)}, 
-  title={Line-of-Sight {MIMO} via Reflection From a Smooth Surface}, 
-  year={2022},
-  volume={},
-  number={},
-  pages={1-5}}
-
-
 
 
 @book{einstein1956investigations,
