--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,13 +14,33 @@
   doi={10.1109/TWC.2022.3232742}}
 
 @INPROCEEDINGS{vtc22,
-  author={A. Pizzo and A. Lozano and S. Rangan and T. L. {Marzetta}},
+  author={A. Pizzo and A. Lozano and S. Rangan and T. L. Marzetta},
   booktitle={IEEE Veh. Techn. Conf. (VTC2022-Spring)}, 
   title={Line-of-Sight {MIMO} via Reflection From a Smooth Surface}, 
   year={2022},
   volume={},
   number={},
   pages={1-5},}
+
+@INPROCEEDINGS{asilomar23,
+  author={M. Sadeghian and A. Pizzo and A. Lozano},
+  booktitle={Asilomar Conf. Signals, Systems, and Computers}, 
+  title={{RIS} in Indoor Environments: Benchmarking Against Ambient Propagation}, 
+  year={2023 (to appear)},
+  volume={},
+  number={},
+  pages={},
+  doi={10.1109/IEEECONF51394.2020.9443506}}
+
+@ARTICLE{PizzoWCL22,
+  author={A. Pizzo and Lozano, A.},
+  journal={IEEE Wireless Commun. Lett.}, 
+  title={On {L}andaus eigenvalue theorem for line-of-sight {MIMO} channels}, 
+  year={2022},
+  volume={11},
+  number={12},
+  pages={2565-2569},
+  doi={10.1109/TWC.2022.3152965}}
 
 @book{einstein1956investigations,
   bibtex_show={true},
