--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,7 @@
 @ARTICLE{PizzoWCL22,
   author={A. Pizzo and Lozano, A.},
   journal={IEEE Wireless Commun. Lett.}, 
-  title={On {L}andaus eigenvalue theorem for line-of-sight {MIMO} channels}, 
+  title={On {L}andau's eigenvalue theorem for line-of-sight {MIMO} channels}, 
   year={2022},
   volume={11},
   number={12},
