--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,6 +32,25 @@
   pages={2565-2569},
   doi={10.1109/TWC.2022.3152965}}
 
+@ARTICLE{PizzoTSP21,
+  author={A. Pizzo and A. D.-J. Torres and L. Sanguinetti and T. L. Marzetta},
+  journal={IEEE Trans. Signal Process.}, 
+  title={Nyquist Sampling and Degrees of Freedom of Electromagnetic Fields}, 
+  year={2022},
+  volume={70},
+  pages={3935-3947},
+  doi={10.1109/TWC.2022.3152965}}
+
+ @ARTICLE{PizzoTWC21,
+  author={A. Pizzo and Sanguinetti, L. and Marzetta, T. L.},
+  journal={IEEE Trans. Wireless Commun.}, 
+  title={Fourier Plane-Wave Series Expansion for holographic {MIMO} Communications}, 
+  year={2022},
+  volume={21},
+  number={9},
+  pages={6890-6905},
+  doi={10.1109/TWC.2022.3152965}}
+
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
