--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -51,6 +51,24 @@
   pages={6890-6905},
   doi={10.1109/TWC.2022.3152965}}
 
+@article{PizzoIT21,
+      title={Spatial Characterization of Electromagnetic Random Channels}, 
+      author={A. Pizzo and Luca Sanguinetti and Thomas L. Marzetta},
+      year={2022},
+      volume={3},
+      pages={847–866},
+      journal={IEEE Open J. Commun. Soc.}}
+
+@INPROCEEDINGS{Asilomar,
+  author={A. Pizzo and Marzetta, Thomas and Sanguinetti, Luca},
+  booktitle={Asilomar Conf. Signals, Systems, and Computers}, 
+  title={Holographic {MIMO} Communications Under Spatially-Stationary Scattering}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={702-706},
+  doi={10.1109/IEEECONF51394.2020.9443506}}
+
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
