--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
 @INPROCEEDINGS{vtc22,
   author={A. Pizzo and A. Lozano and S. Rangan and T. L. Marzetta},
   booktitle={IEEE Veh. Techn. Conf. (VTC2022-Spring)}, 
-  title={Line-of-Sight {MIMO} via Reflection From a Smooth Surface}, 
+  title={Line-of-sight {MIMO} via reflection from a smooth surface}, 
   year={2022},
   volume={},
   number={},
@@ -35,7 +35,7 @@
 @ARTICLE{PizzoTSP21,
   author={A. Pizzo and A. D.-J. Torres and L. Sanguinetti and T. L. Marzetta},
   journal={IEEE Trans. Signal Process.}, 
-  title={Nyquist Sampling and Degrees of Freedom of Electromagnetic Fields}, 
+  title={Nyquist sampling and degrees of freedom of electromagnetic fields}, 
   year={2022},
   volume={70},
   pages={3935-3947},
@@ -44,7 +44,7 @@
  @ARTICLE{PizzoTWC21,
   author={A. Pizzo and Sanguinetti, L. and Marzetta, T. L.},
   journal={IEEE Trans. Wireless Commun.}, 
-  title={Fourier Plane-Wave Series Expansion for holographic {MIMO} Communications}, 
+  title={Fourier plane-wave series expansion for holographic {MIMO} communications}, 
   year={2022},
   volume={21},
   number={9},
@@ -52,7 +52,7 @@
   doi={10.1109/TWC.2022.3152965}}
 
 @article{PizzoIT21,
-      title={Spatial Characterization of Electromagnetic Random Channels}, 
+      title={Spatial characterization of electromagnetic random channels}, 
       author={A. Pizzo and Luca Sanguinetti and Thomas L. Marzetta},
       year={2022},
       volume={3},
@@ -62,7 +62,7 @@
 @INPROCEEDINGS{Asilomar,
   author={A. Pizzo and Marzetta, Thomas and Sanguinetti, Luca},
   booktitle={Asilomar Conf. Signals, Systems, and Computers}, 
-  title={Holographic {MIMO} Communications Under Spatially-Stationary Scattering}, 
+  title={Holographic {MIMO} communications under spatially-stationary scattering}, 
   year={2020},
   volume={},
   number={},
