--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -69,6 +69,24 @@
   pages={702-706},
   doi={10.1109/IEEECONF51394.2020.9443506}}
 
+@ARTICLE{9110848,
+  author={A. Pizzo and T. L. {Marzetta} and L. {Sanguinetti}},
+  journal={IEEE J. Sel. Areas Commun.}, 
+  title={Spatially-stationary model for holographic {MIMO} small-scale fading}, 
+  year={2020},
+  volume={38},
+  number={9},
+  pages={1964-1979},}
+
+@INPROCEEDINGS{9154219,
+  author={A. Pizzo and T. L. {Marzetta} and L. {Sanguinetti}},
+  booktitle={IEEE Int. Work. Sig. Process. Advances Wireless Commun. (SPAWC)}, 
+  title={Degrees of freedom of holographic {MIMO} channels}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={1-5},}
+
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
