--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -87,6 +87,14 @@
   number={},
   pages={1-5},}
 
+@book{IETBook,
+author = {A. Pizzo and L. {Sanguinetti} and E. {Bj\"ornson}},
+booktitle = {Advances in Green Communications for 5G and Beyond 5G Networks},
+publisher = {Institution of Engineering and Technology (IET), UK},
+title = {Energy efficiency analysis of {5G} communication systems},
+year = {2020}
+}
+
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
