--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -95,6 +95,30 @@ title = {Energy efficiency analysis of {5G} communication systems},
 year = {2020}
 }
 
+@INPROCEEDINGS{8815419,  
+author={F. {Mirhosseini} and A. Pizzo and L. {Sanguinetti} and A. {Tadaion}},  
+booktitle={IEEE Int. Work. Sig. Process. Advances Wireless Commun. (SPAWC)},   title={Spectral efficiency analysis in dense massive {MIMO} networks},   
+year={2019},  
+volume={},  
+number={},  
+pages={1-5},}
+
+@ARTICLE{8432101,  
+author={A. Pizzo and A. {Zappone} and L. {Sanguinetti}},  
+journal={IEEE Sig. Process. Lett.},   
+title={Solving fractional polynomial problems by polynomial optimization theory},   year={2018},  
+volume={25},  
+number={10},  
+pages={1540-1544},}
+
+@ARTICLE{8362685,  
+author={A. Pizzo and D. {Verenzuela} and L. {Sanguinetti} and E. {Bj\"ornson}},  journal={IEEE Trans. Green Commun. Netw.},   
+title={Network deployment for maximal energy efficiency in uplink with multislope path loss},   
+year={2018},  
+volume={2},  
+number={3},  
+pages={735-750},}
+
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
