--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -119,6 +119,30 @@ volume={2},
 number={3},  
 pages={735-750},}
 
+@INPROCEEDINGS{7959888,  
+author={A. Pizzo and L. {Sanguinetti}},  
+booktitle={2017 15th International Symposium on Modeling and Optimization in Mobile, Ad Hoc, and Wireless Networks (WIOPT)},   
+title={Optimal design of energy-efficient millimeter wave hybrid transceivers for wireless backhaul},   
+year={2017},  
+volume={},  
+number={},  
+pages={1-8},}
+
+@INPROCEEDINGS{8254572,  
+author={A. Pizzo and D. {Verenzuela} and L. {Sanguinetti} and E. {Bj\"ornson}},  booktitle={IEEE Global Commun. Conf. (GLOBECOM)},   
+title={Network deployment for maximal energy efficiency in uplink with zero-forcing},   year={2017},  
+volume={},  
+number={},  
+pages={1-7},}
+
+@INPROCEEDINGS{7472261,  
+author={A. Pizzo and S. P. {Chepuri} and G. {Leus}},  
+booktitle={IEEE Int. Conf. Acoustics, Speech and Sig. Process. (ICASSP)},   title={Towards multi-rigid body localization},   
+year={2016},  
+volume={},  
+number={},  
+pages={3166-3170},}
+
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
