--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,16 @@
 
 @string{aps = {American Physical Society,}}
 
+@INPROCEEDINGS{asilomar23,
+  author={M. Sadeghian and A. Pizzo and A. Lozano},
+  booktitle={Asilomar Conf. Signals, Systems, and Computers}, 
+  title={{RIS} in indoor environments: Benchmarking against ambient propagation}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={},
+  doi={10.1109/IEEECONF51394.2020.9443506}}
+
 @ARTICLE{PizzoTWC22,
   author={A. Pizzo and Lozano, A. and Rangan, S. and Marzetta, T. L.},
   journal={IEEE Trans. Wireless Commun.}, 
