--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,6 +21,8 @@
   volume={22},
   number={8},
   pages={5229-5239},
+bibtex_show={true},
+  pdf={example_pdf.pdf},
   doi={10.1109/TWC.2022.3232742}}
 
 @INPROCEEDINGS{vtc22,
@@ -30,6 +32,8 @@
   year={2022},
   volume={},
   number={},
+bibtex_show={true},
+  pdf={example_pdf.pdf},
   pages={1-5},}
 
 @ARTICLE{PizzoWCL22,
@@ -40,6 +44,8 @@
   volume={11},
   number={12},
   pages={2565-2569},
+bibtex_show={true},
+  pdf={example_pdf.pdf},
   doi={10.1109/TWC.2022.3152965}}
 
 @ARTICLE{PizzoTSP21,
@@ -49,6 +55,8 @@
   year={2022},
   volume={70},
   pages={3935-3947},
+bibtex_show={true},
+  pdf={example_pdf.pdf},
   doi={10.1109/TWC.2022.3152965}}
 
  @ARTICLE{PizzoTWC21,
@@ -59,6 +67,8 @@
   volume={21},
   number={9},
   pages={6890-6905},
+bibtex_show={true},
+  pdf={example_pdf.pdf},
   doi={10.1109/TWC.2022.3152965}}
 
 @article{PizzoIT21,
@@ -67,6 +77,8 @@
       year={2022},
       volume={3},
       pages={847–866},
+bibtex_show={true},
+  pdf={example_pdf.pdf},
       journal={IEEE Open J. Commun. Soc.}}
 
 @INPROCEEDINGS{Asilomar,
@@ -77,6 +89,8 @@
   volume={},
   number={},
   pages={702-706},
+bibtex_show={true},
+  pdf={example_pdf.pdf},
   doi={10.1109/IEEECONF51394.2020.9443506}}
 
 @ARTICLE{9110848,
@@ -86,6 +100,8 @@
   year={2020},
   volume={38},
   number={9},
+bibtex_show={true},
+  pdf={example_pdf.pdf},
   pages={1964-1979},}
 
 @INPROCEEDINGS{9154219,
@@ -95,6 +111,8 @@
   year={2020},
   volume={},
   number={},
+bibtex_show={true},
+  pdf={example_pdf.pdf},
   pages={1-5},}
 
 @book{IETBook,
@@ -102,6 +120,7 @@ author = {A. Pizzo and L. {Sanguinetti} and E. {Bj\"ornson}},
 booktitle = {Advances in Green Communications for 5G and Beyond 5G Networks},
 publisher = {Institution of Engineering and Technology (IET), UK},
 title = {Energy efficiency analysis of {5G} communication systems},
+bibtex_show={true},
 year = {2020}
 }
 
@@ -111,6 +130,8 @@ booktitle={IEEE Int. Work. Sig. Process. Advances Wireless Commun. (SPAWC)},   t
 year={2019},  
 volume={},  
 number={},  
+bibtex_show={true},
+  pdf={example_pdf.pdf},
 pages={1-5},}
 
 @ARTICLE{8432101,  
@@ -119,6 +140,8 @@ journal={IEEE Sig. Process. Lett.},
 title={Solving fractional polynomial problems by polynomial optimization theory},   year={2018},  
 volume={25},  
 number={10},  
+bibtex_show={true},
+  pdf={example_pdf.pdf},
 pages={1540-1544},}
 
 @ARTICLE{8362685,  
@@ -127,6 +150,8 @@ title={Network deployment for maximal energy efficiency in uplink with multislop
 year={2018},  
 volume={2},  
 number={3},  
+bibtex_show={true},
+  pdf={example_pdf.pdf},
 pages={735-750},}
 
 @INPROCEEDINGS{7959888,  
@@ -136,13 +161,17 @@ title={Optimal design of energy-efficient millimeter wave hybrid transceivers fo
 year={2017},  
 volume={},  
 number={},  
+bibtex_show={true},
+  pdf={example_pdf.pdf},
 pages={1-8},}
 
 @INPROCEEDINGS{8254572,  
 author={A. Pizzo and D. {Verenzuela} and L. {Sanguinetti} and E. {Bj\"ornson}},  booktitle={IEEE Global Commun. Conf. (GLOBECOM)},   
 title={Network deployment for maximal energy efficiency in uplink with zero-forcing},   year={2017},  
 volume={},  
-number={},  
+number={}, 
+bibtex_show={true},
+  pdf={example_pdf.pdf}, 
 pages={1-7},}
 
 @INPROCEEDINGS{7472261,  
@@ -150,7 +179,9 @@ author={A. Pizzo and S. P. {Chepuri} and G. {Leus}},
 booktitle={IEEE Int. Conf. Acoustics, Speech and Sig. Process. (ICASSP)},   title={Towards multi-rigid body localization},   
 year={2016},  
 volume={},  
-number={},  
+number={},
+bibtex_show={true},
+  pdf={example_pdf.pdf},  
 pages={3166-3170},}
 
 @book{einstein1956investigations,
