--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-@INPROCEEDINGS{asilomar23,
+@INPROCEEDINGS{Asilomar23,
   author={M. Sadeghian and A. Pizzo and A. Lozano},
   booktitle={Asilomar Conf. Signals, Systems, and Computers}, 
   title={{RIS} in indoor environments: Benchmarking against ambient propagation}, 
@@ -13,7 +13,7 @@
   pages={},
   doi={10.1109/IEEECONF51394.2020.9443506}}
 
-@ARTICLE{PizzoTWC22,
+@ARTICLE{TWC23,
   author={A. Pizzo and Lozano, A. and Rangan, S. and Marzetta, T. L.},
   journal={IEEE Trans. Wireless Commun.}, 
   title={Wide-aperture {MIMO} via reflection off a smooth surface}, 
@@ -25,7 +25,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf},
   doi={10.1109/TWC.2022.3232742}}
 
-@INPROCEEDINGS{vtc22,
+@INPROCEEDINGS{Vtc22,
   author={A. Pizzo and A. Lozano and S. Rangan and T. L. Marzetta},
   booktitle={IEEE Veh. Techn. Conf. (VTC2022-Spring)}, 
   title={Line-of-sight {MIMO} via reflection from a smooth surface}, 
@@ -36,7 +36,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf},
   pages={1-5},}
 
-@ARTICLE{PizzoWCL22,
+@ARTICLE{WCL22,
   author={A. Pizzo and Lozano, A.},
   journal={IEEE Wireless Commun. Lett.}, 
   title={On {L}andau's eigenvalue theorem for line-of-sight {MIMO} channels}, 
@@ -48,7 +48,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf},
   doi={10.1109/TWC.2022.3152965}}
 
-@ARTICLE{PizzoTSP21,
+@ARTICLE{TSP22,
   author={A. Pizzo and A. D.-J. Torres and L. Sanguinetti and T. L. Marzetta},
   journal={IEEE Trans. Signal Process.}, 
   title={Nyquist sampling and degrees of freedom of electromagnetic fields}, 
@@ -59,7 +59,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf},
   doi={10.1109/TWC.2022.3152965}}
 
- @ARTICLE{PizzoTWC21,
+ @ARTICLE{TWC22,
   author={A. Pizzo and Sanguinetti, L. and Marzetta, T. L.},
   journal={IEEE Trans. Wireless Commun.}, 
   title={Fourier plane-wave series expansion for holographic {MIMO} communications}, 
@@ -71,7 +71,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf},
   doi={10.1109/TWC.2022.3152965}}
 
-@article{PizzoIT21,
+@article{OJCOM22,
       title={Spatial characterization of electromagnetic random channels}, 
       author={A. Pizzo and Luca Sanguinetti and Thomas L. Marzetta},
       year={2022},
@@ -81,7 +81,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf},
       journal={IEEE Open J. Commun. Soc.}}
 
-@INPROCEEDINGS{Asilomar,
+@INPROCEEDINGS{Asilomar20,
   author={A. Pizzo and Marzetta, Thomas and Sanguinetti, Luca},
   booktitle={Asilomar Conf. Signals, Systems, and Computers}, 
   title={Holographic {MIMO} communications under spatially-stationary scattering}, 
@@ -93,7 +93,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf},
   doi={10.1109/IEEECONF51394.2020.9443506}}
 
-@ARTICLE{9110848,
+@ARTICLE{JSAC20,
   author={A. Pizzo and T. L. {Marzetta} and L. {Sanguinetti}},
   journal={IEEE J. Sel. Areas Commun.}, 
   title={Spatially-stationary model for holographic {MIMO} small-scale fading}, 
@@ -104,7 +104,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf},
   pages={1964-1979},}
 
-@INPROCEEDINGS{9154219,
+@INPROCEEDINGS{Spawc20,
   author={A. Pizzo and T. L. {Marzetta} and L. {Sanguinetti}},
   booktitle={IEEE Int. Work. Sig. Process. Advances Wireless Commun. (SPAWC)}, 
   title={Degrees of freedom of holographic {MIMO} channels}, 
@@ -124,7 +124,7 @@ bibtex_show={true},
 year = {2020}
 }
 
-@INPROCEEDINGS{8815419,  
+@INPROCEEDINGS{Spawc19,  
 author={F. {Mirhosseini} and A. Pizzo and L. {Sanguinetti} and A. {Tadaion}},  
 booktitle={IEEE Int. Work. Sig. Process. Advances Wireless Commun. (SPAWC)},   title={Spectral efficiency analysis in dense massive {MIMO} networks},   
 year={2019},  
@@ -134,7 +134,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf},
 pages={1-5},}
 
-@ARTICLE{8432101,  
+@ARTICLE{SPL18,  
 author={A. Pizzo and A. {Zappone} and L. {Sanguinetti}},  
 journal={IEEE Sig. Process. Lett.},   
 title={Solving fractional polynomial problems by polynomial optimization theory},   year={2018},  
@@ -144,7 +144,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf},
 pages={1540-1544},}
 
-@ARTICLE{8362685,  
+@ARTICLE{TGCN18,  
 author={A. Pizzo and D. {Verenzuela} and L. {Sanguinetti} and E. {Bj\"ornson}},  journal={IEEE Trans. Green Commun. Netw.},   
 title={Network deployment for maximal energy efficiency in uplink with multislope path loss},   
 year={2018},  
@@ -154,7 +154,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf},
 pages={735-750},}
 
-@INPROCEEDINGS{7959888,  
+@INPROCEEDINGS{Wiopt17,  
 author={A. Pizzo and L. {Sanguinetti}},  
 booktitle={2017 15th International Symposium on Modeling and Optimization in Mobile, Ad Hoc, and Wireless Networks (WIOPT)},   
 title={Optimal design of energy-efficient millimeter wave hybrid transceivers for wireless backhaul},   
@@ -165,7 +165,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf},
 pages={1-8},}
 
-@INPROCEEDINGS{8254572,  
+@INPROCEEDINGS{Globecom17,  
 author={A. Pizzo and D. {Verenzuela} and L. {Sanguinetti} and E. {Bj\"ornson}},  booktitle={IEEE Global Commun. Conf. (GLOBECOM)},   
 title={Network deployment for maximal energy efficiency in uplink with zero-forcing},   year={2017},  
 volume={},  
@@ -174,7 +174,7 @@ bibtex_show={true},
   pdf={example_pdf.pdf}, 
 pages={1-7},}
 
-@INPROCEEDINGS{7472261,  
+@INPROCEEDINGS{Icassp16,  
 author={A. Pizzo and S. P. {Chepuri} and G. {Leus}},  
 booktitle={IEEE Int. Conf. Acoustics, Speech and Sig. Process. (ICASSP)},   title={Towards multi-rigid body localization},   
 year={2016},  
