--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,7 +22,6 @@
   number={8},
   pages={5229-5239},
 bibtex_show={true},
-  pdf={example_pdf.pdf},
   doi={10.1109/TWC.2022.3232742}}
 
 @INPROCEEDINGS{Vtc22,
@@ -33,7 +32,7 @@ bibtex_show={true},
   volume={},
   number={},
 bibtex_show={true},
-  pdf={example_pdf.pdf},
+  pdf={Vtc22.pdf},
   pages={1-5},}
 
 @ARTICLE{WCL22,
@@ -45,7 +44,7 @@ bibtex_show={true},
   number={12},
   pages={2565-2569},
 bibtex_show={true},
-  pdf={example_pdf.pdf},
+  pdf={WCL22.pdf},
   doi={10.1109/TWC.2022.3152965}}
 
 @ARTICLE{TSP22,
@@ -56,7 +55,7 @@ bibtex_show={true},
   volume={70},
   pages={3935-3947},
 bibtex_show={true},
-  pdf={example_pdf.pdf},
+  pdf={TSP22.pdf},
   doi={10.1109/TWC.2022.3152965}}
 
  @ARTICLE{TWC22,
@@ -68,7 +67,7 @@ bibtex_show={true},
   number={9},
   pages={6890-6905},
 bibtex_show={true},
-  pdf={example_pdf.pdf},
+  pdf={TWC22.pdf},
   doi={10.1109/TWC.2022.3152965}}
 
 @article{OJCOM22,
@@ -78,7 +77,7 @@ bibtex_show={true},
       volume={3},
       pages={847–866},
 bibtex_show={true},
-  pdf={example_pdf.pdf},
+  pdf={OJCOM22.pdf},
       journal={IEEE Open J. Commun. Soc.}}
 
 @INPROCEEDINGS{Asilomar20,
@@ -90,7 +89,7 @@ bibtex_show={true},
   number={},
   pages={702-706},
 bibtex_show={true},
-  pdf={example_pdf.pdf},
+  pdf={Asilomar20.pdf},
   doi={10.1109/IEEECONF51394.2020.9443506}}
 
 @ARTICLE{JSAC20,
@@ -101,7 +100,7 @@ bibtex_show={true},
   volume={38},
   number={9},
 bibtex_show={true},
-  pdf={example_pdf.pdf},
+  pdf={JSAC20.pdf},
   pages={1964-1979},}
 
 @INPROCEEDINGS{Spawc20,
@@ -112,7 +111,7 @@ bibtex_show={true},
   volume={},
   number={},
 bibtex_show={true},
-  pdf={example_pdf.pdf},
+  pdf={Spawc20.pdf},
   pages={1-5},}
 
 @book{IETBook,
@@ -131,7 +130,7 @@ year={2019},
 volume={},  
 number={},  
 bibtex_show={true},
-  pdf={example_pdf.pdf},
+  pdf={Spawc19.pdf},
 pages={1-5},}
 
 @ARTICLE{SPL18,  
@@ -141,7 +140,7 @@ title={Solving fractional polynomial problems by polynomial optimization theory}
 volume={25},  
 number={10},  
 bibtex_show={true},
-  pdf={example_pdf.pdf},
+  pdf={SPL18.pdf},
 pages={1540-1544},}
 
 @ARTICLE{TGCN18,  
@@ -151,7 +150,7 @@ year={2018},
 volume={2},  
 number={3},  
 bibtex_show={true},
-  pdf={example_pdf.pdf},
+  pdf={TGCN18.pdf},
 pages={735-750},}
 
 @INPROCEEDINGS{Wiopt17,  
@@ -162,7 +161,7 @@ year={2017},
 volume={},  
 number={},  
 bibtex_show={true},
-  pdf={example_pdf.pdf},
+  pdf={Wiopt17.pdf},
 pages={1-8},}
 
 @INPROCEEDINGS{Globecom17,  
@@ -171,7 +170,7 @@ title={Network deployment for maximal energy efficiency in uplink with zero-forc
 volume={},  
 number={}, 
 bibtex_show={true},
-  pdf={example_pdf.pdf}, 
+  pdf={Globecom17.pdf}, 
 pages={1-7},}
 
 @INPROCEEDINGS{Icassp16,  
@@ -181,7 +180,7 @@ year={2016},
 volume={},  
 number={},
 bibtex_show={true},
-  pdf={example_pdf.pdf},  
+  pdf={Icassp16.pdf},  
 pages={3166-3170},}
 
 @book{einstein1956investigations,
