--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,6 +45,7 @@ bibtex_show={true},
   pages={2565-2569},
 bibtex_show={true},
   pdf={WCL22.pdf},
+selected={true},
   doi={10.1109/TWC.2022.3152965}}
 
 @ARTICLE{TSP22,
@@ -68,6 +69,7 @@ bibtex_show={true},
   pages={6890-6905},
 bibtex_show={true},
   pdf={TWC22.pdf},
+selected={true},
   doi={10.1109/TWC.2022.3152965}}
 
 @article{OJCOM22,
@@ -78,6 +80,7 @@ bibtex_show={true},
       pages={847–866},
 bibtex_show={true},
   pdf={OJCOM22.pdf},
+selected={true},
       journal={IEEE Open J. Commun. Soc.}}
 
 @INPROCEEDINGS{Asilomar20,
