--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,6 +22,7 @@
   number={8},
   pages={5229-5239},
 bibtex_show={true},
+pdf={TWC23.pdf},
   doi={10.1109/TWC.2022.3232742}}
 
 @INPROCEEDINGS{Vtc22,
