--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -81,6 +81,7 @@ selected={true},
       volume={3},
       pages={847–866},
 bibtex_show={true},
+selected={true},
   pdf={OJCOM22.pdf},
 html={https://www.youtube.com/watch?v=loelmLih2ko},
       journal={IEEE Open J. Commun. Soc.}}
