--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
 bibtex_show={true},
 pdf={TWC23.pdf},
 selected={true},
-preview={TWC23_img.pdf},
+preview={TWC23_img.jpg},
   doi={10.1109/TWC.2022.3232742}}
 
 @INPROCEEDINGS{Vtc22,
