--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,12 +5,13 @@
 
 @INPROCEEDINGS{Asilomar23,
   author={M. Sadeghian and A. Pizzo and A. Lozano},
-  booktitle={Asilomar Conf. Signals, Systems, and Computers}, 
+  booktitle={Asilomar Conf. Signals, Systems, and Computers (ACSSC)}, 
   title={{RIS} in indoor environments: Benchmarking against ambient propagation}, 
   year={2023},
   volume={},
   number={},
   pages={},
+  bibtex_show={true},
   pdf={ACSSC23.pdf},
   doi={10.1109/IEEECONF51394.2020.9443506}}
 
@@ -89,7 +90,7 @@ html={https://www.youtube.com/watch?v=loelmLih2ko},
 
 @INPROCEEDINGS{Asilomar20,
   author={A. Pizzo and Marzetta, Thomas and Sanguinetti, Luca},
-  booktitle={Asilomar Conf. Signals, Systems, and Computers}, 
+  booktitle={Asilomar Conf. Signals, Systems, and Computers (ACSSC)}, 
   title={Holographic {MIMO} communications under spatially-stationary scattering}, 
   year={2020},
   volume={},
