--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -74,7 +74,7 @@ bibtex_show={true},
 bibtex_show={true},
   pdf={TWC22.pdf},
 selected={true},
-code={aa},
+code={https://github.com/andrea-pizzo/Fourier-plane-wave-series},
   doi={10.1109/TWC.2022.3152965}}
 
 @article{OJCOM22,
