--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,17 @@
 
 @string{aps = {American Physical Society,}}
 
+@INPROCEEDINGS{SPAWC24,
+  author={A. Pizzo and A. {Lozano}},
+  booktitle={IEEE Int. Work. Sig. Process. Advances Wireless Commun. (SPAWC)}, 
+  title={Superdirectivity in linear holographic {MIMO}}, 
+  year={2024},
+  volume={},
+  number={},
+bibtex_show={true},
+  pdf={SPAWC24.pdf},
+  pages={1-5},}
+  
 @INPROCEEDINGS{Asilomar23,
   author={M. Sadeghian and A. Pizzo and A. Lozano},
   booktitle={Asilomar Conf. Signals, Systems, and Computers (ACSSC)}, 
