--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,18 @@
 
 @string{aps = {American Physical Society,}}
 
+@ARTICLE{JSAIT24,
+  author={A. Pizzo and A. {Lozano}},
+  journal={[Online]}, 
+  title={Mutual Coupling in Holographic {MIMO}: Physical Modeling and Information-Theoretic Analysis}, 
+  year={2024},
+  volume={},
+  number={},
+bibtex_show={true},
+selected={true},
+  pdf={JSAIT24.pdf},
+  pages={},}
+
 @INPROCEEDINGS{SPAWC24,
   author={A. Pizzo and A. {Lozano}},
   booktitle={IEEE Int. Work. Sig. Process. Advances Wireless Commun. (SPAWC)}, 
@@ -36,7 +48,6 @@ bibtex_show={true},
   pages={5229-5239},
 bibtex_show={true},
 pdf={TWC23.pdf},
-selected={true},
   doi={10.1109/TWC.2022.3232742}}
 
 @INPROCEEDINGS{Vtc22,
