--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-@ARTICLE{JSAIT24,
+@ARTICLE{Arxiv24,
   author={A. Pizzo and A. {Lozano}},
   journal={[Online]}, 
   title={Mutual Coupling in Holographic {MIMO}: Physical Modeling and Information-Theoretic Analysis}, 
